--- a/index.html
+++ b/index.html
@@ -10,31 +10,58 @@
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
 </head>
 <body>
-    <header class="bg-primary text-white p-3 mb-4 text-center">
-        <img src="https://telegram.org/img/t_logo.png" alt="Telegram Logo" class="telegram-logo me-2">
-        <h1 class="d-inline-block">Forms</h1>
-    </header>
-    <main class="container">
+    <!-- Sabit Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top shadow-sm">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">
+                <img src="https://telegram.org/img/t_logo.png" alt="Telegram Logo" class="telegram-logo me-2">
+                Forms
+            </a>
+            <div class="navbar-nav">
+                <a class="nav-link active" href="#questions">Questions</a>
+                <a class="nav-link" href="#responses">Responses</a>
+                <a class="nav-link" href="#settings">Settings</a>
+                <a class="nav-link" href="#my-forms">My Forms</a>
+            </div>
+        </div>
+    </nav>
+
+    <main class="container mt-5 pt-5">
         <section id="form-builder">
-            <h2 class="mb-3">Create a New Form</h2>
-            <input type="text" id="form-title" class="form-control mb-3" placeholder="Enter form title" required>
-            <div id="questions-container"></div>
-            <div class="mb-3">
-                <select id="question-type" class="form-select">
-                    <option value="multiple-choice"><i class="bi bi-list-ul"></i> Multiple Choice</option>
-                    <option value="dropdown"><i class="bi bi-caret-down-fill"></i> Dropdown</option>
-                    <option value="paragraph"><i class="bi bi-textarea-t"></i> Paragraph</option>
-                    <option value="date"><i class="bi bi-calendar-date"></i> Date</option>
-                    <option value="short-answer"><i class="bi bi-text-indent-left"></i> Short Answer</option>
-                </select>
+            <div class="card">
+                <div class="card-header bg-primary text-white">
+                    <h2 id="form-title-display" class="mb-0">Untitled Form</h2>
+                </div>
+                <div class="card-body">
+                    <input type="text" id="form-title" class="form-control mb-3" placeholder="Enter form title" required>
+                    <textarea id="form-description" class="form-control mb-3" placeholder="Enter form description" rows="2"></textarea>
+                    <div id="questions-container"></div>
+                    <div class="mb-3">
+                        <select id="question-type" class="form-select">
+                            <option value="multiple-choice"><i class="bi bi-list-ul"></i> Multiple Choice</option>
+                            <option value="dropdown"><i class="bi bi-caret-down-fill"></i> Dropdown</option>
+                            <option value="paragraph"><i class="bi bi-textarea-t"></i> Paragraph</option>
+                            <option value="date"><i class="bi bi-calendar-date"></i> Date</option>
+                            <option value="short-answer"><i class="bi bi-text-indent-left"></i> Short Answer</option>
+                            <option value="multiple-choice-grid"><i class="bi bi-grid-3x3-gap"></i> Multiple Choice Grid</option>
+                        </select>
+                    </div>
+                    <div class="d-flex gap-2 mb-3">
+                        <button id="add-question" class="btn btn-primary">Add Question</button>
+                        <button id="remove-question" class="btn btn-outline-danger" disabled>Remove Question</button>
+                    </div>
+                    <button id="save-form" class="btn btn-primary w-100">Save & Share Form</button>
+                </div>
             </div>
-            <div class="d-flex gap-2 mb-3">
-                <button id="add-question" class="btn btn-primary">Add Question</button>
-                <button id="remove-question" class="btn btn-outline-danger" disabled>Remove Question</button>
-            </div>
-            <button id="save-form" class="btn btn-primary w-100">Save & Share Form</button>
+        </section>
+
+        <!-- My Forms (Profil Bölümü) -->
+        <section id="my-forms" class="mt-5" style="display: none;">
+            <h2>My Forms</h2>
+            <div id="forms-list" class="list-group"></div>
         </section>
     </main>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="script.js"></script>
 </body>
